# ofs.old

./: .gitignore  CMakeLists.txt
data/shaders/: star-frag.glsl
shaders/: planet-frag.glsl  planet-vert.glsl  star-frag.glsl  star-vert.glsl
src/: CMakeLists.txt
src/engine/: engine.cpp  engine.h  object.cpp  object.h  player.cpp  player.h
src/engine/render/: glrender.cpp  glshader.cpp  render.cpp  render.h  scene.h  shader.h  terrainmgr.cpp  terrainmgr.h  vobject.cpp  vobject.h  vplanet.cpp
src/engine/render/gl/: client.cpp  client.h  funcs.h  mesh.cpp  mesh.h  render.cpp  scene.cpp  shader.cpp  shadermgr.cpp  shadermgr.h
src/engine/universe/: astro.h  body.cpp  star.cpp  star.h  stardb.cpp  universe.cpp  universe.h
src/main/: core.cpp  core.h  coreapp.cpp  coreapp.h  date.cpp  date.h  main.h  math.h  plane.cpp  plane.h
src/main/qt/: ofscoreapp.cpp  ofscoreapp.h  ofswidget.cpp  ofswidget.h  ofswinapp.cpp  ofswinapp.h  qtmain.cpp  qtwinapp.cpp  qtwinapp.h
src/main/sdl2/: coreapp.cpp  coreapp.h  glmain.cpp  vkmain.cpp
src/osd/qt/: qtmain.cpp
src/osd/sdl2/: main.cpp
src/render/: image.cpp  image.h  loader.h  scene.cpp  scene.h  shader.cpp  shader.h  shadermgr.cpp  shadermgr.h  starcolors.cpp  stars.cpp  stars.h  terrainmgr.cpp  terrainmgr.h  texture.cpp  texture.h  texture2.cpp  texture2.h  vobject.cpp  vobject.h  vplanet.cpp  ztreemgr.cpp  ztreemgr.h
src/render/gl/: context.cpp  context.h  funcs.h  mesh.cpp  mesh.h  scene.cpp  scene.h  shader.cpp  shader.h  shadermgr.cpp  shadermgr.h  stars.cpp  stars.h  texture.cpp  texture.h
src/shaders/: star-vert.glsl
src/universe/: asterism.cpp  asterism.h  astro.cpp  astro.h  body.cpp  body.h  constellations.cpp  constellations.h  hygdata.h  star.cpp  star.h  stardb.cpp  stardb.h  startree.cpp  startree.h  universe.cpp  universe.h  xhipdata.h
src/util/: color.cpp  color.h  dds.cpp  dds.h  tree.cpp  tree.h
